--- a/app/src/main/res/layout/activity_caradd.xml
+++ b/app/src/main/res/layout/activity_caradd.xml
@@ -13,16 +13,13 @@
         android:text="Type and Run "
         android:textSize="30dp"
         android:layout_marginTop="10dp"
-        android:id="@+id/top"
         style="@style/CustomButtonStyle"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Make:"
-        android:textSize="20dp"
-        android:id="@+id/tv_make"
-        />
+        android:textSize="20dp" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,9 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Year:"
-        android:textSize="20dp"
-        android:id="@+id/tv_year"
-        />
+        android:textSize="20dp" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,9 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Color:"
-        android:textSize="20dp"
-        android:id="@+id/tv_color"
-        />
+        android:textSize="20dp" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
