--- a/app/src/main/res/layout/activity_caradd.xml
+++ b/app/src/main/res/layout/activity_caradd.xml
@@ -83,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CREATE CAR"
-        android:id="@+id/btn_createcar"
+        android:id="@+id/btn_createcarr"
         android:layout_marginLeft="60dp"
         style="@style/CustomButtonStyle"/>
         <Button
@@ -106,7 +106,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_createcar"
+        android:layout_below="@+id/btn_createcarr"
         >
 
         <TextView
